--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.9",
     "@google/generative-ai": "^0.24.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
@@ -34,7 +35,11 @@
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
+    "react-calendar": "^6.0.0",
+    "react-date-picker": "^12.0.1",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
     "y-protocols": "^1.0.7",
