--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-calendar": "^6.0.0",
     "react-date-picker": "^12.0.1",
     "react-dom": "19.2.3",
+    "react-drag-drop-files": "^3.1.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
