--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.9",
+    "@google-cloud/documentai": "^9.5.0",
     "@google/generative-ai": "^0.24.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
@@ -33,6 +34,8 @@
     "mammoth": "^1.11.0",
     "material-symbols": "^0.40.2",
     "next": "16.1.1",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.530",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-calendar": "^6.0.0",
@@ -52,6 +55,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
