--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mammoth": "^1.11.0",
     "material-symbols": "^0.40.2",
     "next": "16.1.1",
-    "pdf-parse": "^2.4.5",
+    "pdf-lib": "^1.17.1",
+    "pdf2json": "^4.0.1",
     "pdfjs-dist": "^5.4.530",
     "postcss": "^8.5.6",
     "react": "19.2.3",
