--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-docx-js": "^0.3.1",
     "jspdf": "^3.0.4",
     "lib0": "^0.2.117",
+    "lucide-react": "^0.562.0",
     "mammoth": "^1.11.0",
     "material-symbols": "^0.40.2",
     "next": "16.1.1",
